--- a/Notebook/ReferenceModel.tex
+++ b/Notebook/ReferenceModel.tex
@@ -20,7 +20,7 @@ Figure \ref{ProtocolEncap}  demonstrate the complete protocol encapsulation duri
 
 Whereas the TCP/IP model layers (table \ref{TCP}) are referred to only by name, the seven OSI model layers (table \ref{OSI}) are more often referred to by number rather than by name. For instance, the physical layer is referred to as Layer 1 of the OSI model.
 
-\tableStart[\caption{The OSI Reference Model}\label{OSI}] {|cl p{12cm}|}
+\tableStart[\caption{The OSI Reference Model}\label{OSI}] {|c|l|p{12cm}|}
 \head{Number} & \head{Layer} & \head{Description} \w
 7 & Application & contain protocols used for process-toprocess communications\w
 6 & Presentation & provide for common representation of the data transferred between application layer services\w
@@ -100,7 +100,7 @@ Rollover & Cisco proprietary & Connects a workstation serial port to a router co
 
 Optical fiber cable transmits data over longer distances and at higher bandwidths than any other networking media. Unlike copper wires, fiber-optic cable can transmit signals with less attenuation and is completely immune to EMI and RFI. 
 
-\tableStart[\caption{Fiber Cable Components}]{|l|p{12cm}|
+\tableStart[\caption{Fiber Cable Components}]{|l|p{12cm}|}
 \head{Component} & \head{Description} \w
 Core & The core is actually the light transmission element at the center of the optical fiber. This core is typically silica or glass. Light pulses travel through the fiber core.\w
 Cladding & It tends to act like a mirror by reflecting light back into the core of the fiber. This keeps light in the core as it travels down the fiber.\w
