--- a/Notebook/main.tex
+++ b/Notebook/main.tex
@@ -17,43 +17,43 @@
 \titleAT{CCNA}
 \thispagestyle{empty}{\tableofcontents\listofcodes}
 
-%\part{NETWORK FUNDAMENTALS}
-%\include{ReferenceModel}
-%\include{LANdesign}
-%\include{WANconcepts}
-%\include{NetworkEvolution}
-%
-%\part{SWITCHING TECHNOLOGIES}
-%\include{Switch}
-%\include{VLAN}
-%\include{vtp}
-%\include{stp}
-%\include{EtherChannel}
-%
-%
-%\part{ROUTING TECHNOLOGIES}
-%\include{Router}
-%\include{IPv6}
-%\include{StaticRoute}
-%\include{eigrp}
-%\include{ospf}
-%
-%\part{WAN TECHNOLOGIES}
-%\include{PPP}
-\include{GRE,eBGP}
-%\include{QoS}
-%
-%\part{INFRASTRUCTURE SERVICE}
-%\include{dhcp}
-%\include{hsrp}
-%
-%\part{INFRASTRUCTURE SECURITY}
-%\include{nat}
-%\include{ACL}
+\part{NETWORK FUNDAMENTALS}
+\include{ReferenceModel}
+\include{LANdesign}
+\include{WANconcepts}
+\include{NetworkEvolution}
 
-%\part{INFRASTRUCTURE MANAGEMENT}
-%\include{Monitoring}
-%\include{Troubleshooting}
-%\include{cdp}
-%\include{Maintenance}
+\part{SWITCHING TECHNOLOGIES}
+\include{Switch}
+\include{VLAN}
+\include{vtp}
+\include{stp}
+\include{EtherChannel}
+
+
+\part{ROUTING TECHNOLOGIES}
+\include{Router}
+\include{IPv6}
+\include{StaticRoute}
+\include{eigrp}
+\include{ospf}
+
+\part{WAN TECHNOLOGIES}
+\include{PPP}
+\include{GRE,eBGP}
+\include{QoS}
+
+\part{INFRASTRUCTURE SERVICE}
+\include{dhcp}
+\include{hsrp}
+
+\part{INFRASTRUCTURE SECURITY}
+\include{nat}
+\include{ACL}
+
+\part{INFRASTRUCTURE MANAGEMENT}
+\include{Monitoring}
+\include{Troubleshooting}
+\include{cdp}
+\include{Maintenance}
 \end{document}
